# Expedition-Python

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  example.py  pyproject.toml  readthedocs.yaml  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml  version.yml  workflow.yml
Expedition/: __init__.py  dll_wrapper.py  enums.py  exval.py
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
reference/: README.md
tests/: test_dll_wrapper_unit.py  test_expedition.py
